# sound-shader

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Readme.md  memo.txt
examples/: Readme.md  decryption.comp  decryption.json  decryption.rs  goup-littlebylittle.comp  goup-littlebylittle.rs  mix.comp  mix.json  mix.rs  pirates.comp  texel.comp  wav-play.comp  wav_copy.rs
resources/: Readme.md
src/: cpal_wrapper.rs  hound_wrapper.rs  lib.rs  main.rs  sample.comp  wgpu_wrapper.rs
tests/: decryption.comp  simple-sine.comp  tests.rs  texel.comp
