[package]
name = "sound-shader"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.2"
cpal = "0.13.4"
hound = "3.4.0"
naga = { version = "0.6.3", features = ["glsl-in", "wgsl-out"] }
pollster = "0.2.4"
rustfft = "6.0.1"
wgpu = "0.10.1"

[dev-dependencies]
env_logger = "0.8"

[[test]]
name = "mix"
path = "examples/mix.rs"
