[package]
name = "sound-shader"
version = "0.1.0"
authors = ["Yoshinori Tanimura <yotabaito@gmail.com>"]
edition = "2018"
description = "Simple sound shader player"
homepage = "https://github.com/ytanimura/sound-shader"
repogitory = "https://github.com/ytanimura/sound-shader"
license = "Apache-2.0"
keywords = ["GLSL", "GPU", "audio", "sound shader"]
categories = ["multimedia"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.7.2"
clap = "2.33.3"
cpal = "0.13.4"
ctrlc = "3.2.0"
hound = "3.4.0"
naga = { version = "0.6.3", features = ["glsl-in", "wgsl-out"] }
pollster = "0.2.4"
rustfft = "6.0.1"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
wgpu = "0.10.2"
